# ZygiskNextModuleSample

./: README.md  build.gradle.kts  settings.gradle.kts
gradle/: libs.versions.toml
module/: build.gradle.kts
module/src/main/cpp/: CMakeLists.txt  example.cpp  zygisk_next_api.h
module/template/: customize.sh  module.prop  sepolicy.rule  zn_modules.txt
